Trying to wrap it up. Added widget-text to additional.css to resolve style customizer issues. Still no live preview

--- a/css/additional.css
+++ b/css/additional.css
@@ -1,3 +1,6 @@
+widget-text {
+  color: #000000;
+}
 
 /**--------------------------------------------------------------------------*/
 code, pre {
